# cmakeTest

./: CMakeLists.txt  README.md
header/: testapi.h
src/: CMakeLists.txt  helloworld.c  main.c
